# esp32-partylight

./: .gitignore  .gitmodules  BLUETOOTH_OTA_SUMMARY.md  OTA_ARCHITECTURE.md  OTA_QUICK_REFERENCE.md  README.md  TODO.md  index.html  manifest.json  partylight-config-app-bin-4fda2dc5e783317a.js  partylight-config-app-bin-4fda2dc5e783317a_bg.wasm  partylight-config-app-bin-76b8710c5c687f61.js  partylight-config-app-bin-76b8710c5c687f61_bg.wasm  sw.js
.cargo/: config.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: copilot-setup-steps.yml  pages.yml  pr-check.yml  release.yml
app/: Cargo.toml  README.md  REFACTORING_NOTES.md  index.html  mobile.toml  rust-toolchain  spec.md
app/.cargo/: config.toml
app/assets/: manifest.json
app/fonts/: Cynatar.txt
app/src/: app.rs  font_wasm.rs  fonts.rs  lib.rs  main.rs  web_bluetooth.rs
case/: spec.md
common/: Cargo.toml
common/src/: config.rs  config_presets.rs  lib.rs
master/: Cargo.toml  rust-toolchain.toml
master/src/: main.rs
mcu/: Cargo.toml  OTA_README.md  README.md  ota_update.py  partitions.csv  rust-toolchain.toml
mcu/.cargo/: config.toml
mcu/src/: bluetooth.rs  lights.rs  main.rs  usb_audio.rs  util.rs  ws2812.rs
uart_slave/: Cargo.toml
uart_slave/src/: main.rs
