[package]
name = "common"
version = "0.1.0"
edition = "2024"



[dependencies]
# needs to be the same version as the one used internally by postcard
heapless = "0.7.17"
postcard = { version = "1.1.3", features = ["postcard-derive"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
